# paint

./: Cargo.toml  README.md  flake.nix  rustfmt.toml
.helix/: languages.toml
android-app/: build.gradle.kts  settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
android-app/gradle/: libs.versions.toml
android-app/gradle/wrapper/: gradle-wrapper.properties
crates/paint-android/: Cargo.toml
crates/paint-android/src/: behaviour.rs  color.rs  color_picker.rs  gpu.rs  lib.rs  logging.rs  runtime.rs  surface.rs
crates/paint-android/src/renderer/: mod.rs  viewport.rs
crates/paint-behaviour/: Cargo.toml
crates/paint-behaviour/src/: lib.rs
crates/paint-core/: Cargo.toml
crates/paint-core/src/: behaviour.rs  lib.rs  persistence.rs  presentation.rs
crates/paint-core/src/color/: mod.rs  srgb.rs
crates/paint-core/src/color/oklab/: mod.rs  utils.rs
crates/paint-wgpu/: Cargo.toml
crates/paint-wgpu/src/: compositor.rs  context.rs  lib.rs  pipeline_layouts.rs  renderer.rs  texture.rs  utils.rs
crates/paint-wgpu/src/bind_group_layouts/: mod.rs  sampled_textures.rs  single_sampled_texture.rs
crates/paint-wgpu/src/brush_engine/: mod.rs
crates/paint-wgpu/src/render_pipelines/: canvas_border.rs  fullscreen_triangle.rs  fullscreen_triangle_interpolate_two_textures.rs  mod.rs  single_quad.rs  stamped_brush.rs
crates/paint-wgpu/src/renderer/: color_picker.rs  mod.rs  viewport.rs
crates/paint-wgpu/src/renderer/color_picker/: mod.rs  slice.rs
crates/paint-wgpu/src/shaders/: mod.rs
(+38 files in other folders)
