[workspace]
resolver = "3"
members = [ "crates/*" ]

[profile.dev]
opt-level = 1

[workspace.dependencies]
chrono = "0.4.42"
futures-lite = "2.6.1"
glam = "0.30.9"
half = "2.7.1"
jni = "0.21.0"
jni_fn = "0.1.2"
ndk = "0.9.0"
oneshot = "0.1.13"
rand = "0.9.2"
rayon = "1.11.0"
tracing = "0.1.44"
tracing-logcat = "0.1.0"
tracing-panic = "0.1.2"
tracing-subscriber = "0.3.2"
wgpu = "28.0.0"
zerocopy = "0.8.31"
